Started first paragraph of intro; trying to write hook

--- a/Introduccion/Subsecciones/VariablesCataclismicas.tex
+++ b/Introduccion/Subsecciones/VariablesCataclismicas.tex
@@ -1,7 +1,14 @@
 \section{Variables Cataclísmicas}
-
-\subsection{Historia}
-
+Nuestra Galaxia es el hogar de varios sistemas solares, los cuales muestran una
+gran variedad de propiedades físicas. Existen sistemas tal como nuestro sistema
+solar, que consisten de una estrella de secuencia principal rodeada de planetas
+y restos de material de su etapa de formación. Otros sistemas están compuestos
+de dos estrellas o más, donde todas las estrellas del sistema orbitan un punto
+en común denominado el \textit{centro de masas}. Esta tesis se enfoca en un tipo
+de sistema en especifico denominado como \textbf{variables cataclísmicas}:
+sistemas de contacto que consisten de dos estrellas de tipo
+\hyperref[intro:sec:EnanaBlanca]{enana blanca} y una
+\hyperref[intro:sec:EnanaRoja]{enana roja}.
 
 \comment{
 Este tipo de sistemas muestran comportamiento variable a lo largo del tiempo, en
