Started second chapter, "Muestra." Fixed bug with Gaia mission bibliography

--- a/Introduccion/Subsecciones/VariablesCataclismicas.tex
+++ b/Introduccion/Subsecciones/VariablesCataclismicas.tex
@@ -6,9 +6,9 @@ y restos de material de su etapa de formación. Otros sistemas están compuestos
 de dos estrellas o más, donde todas las estrellas del sistema orbitan un punto
 en común denominado el \textit{centro de masas}. Esta tesis se enfoca en un tipo
 de sistema en especifico denominado como \textbf{variables cataclísmicas}:
-sistemas de contacto que consisten de dos estrellas de tipo
+sistemas de contacto que consisten de una estrella de tipo
 \hyperref[intro:sec:EnanaBlanca]{enana blanca} y una
-\hyperref[intro:sec:EnanaRoja]{enana roja}.
+\hyperref[intro:sec:EnanaRoja]{enana roja}. 
 
 \comment{
 Este tipo de sistemas muestran comportamiento variable a lo largo del tiempo, en
