--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,8 @@
 \newcommand{\R}{\textsf{R}}
 \newcommand{\Fortran}{\textsf{Fortran}}
 \newcommand{\comment}[1]{}
+\newcommand{\gaiaNoSpace}{\textit{Gaia}}
+\newcommand{\gaia}{\gaiaNoSpace \space}
 %------------------------------------------------------------------------------------
 \definecolor{MyGray}{rgb}{0.30,0.31,0.32} % definizione grigio
 \definecolor{MyDarkBlue}{rgb}{0.,0.08,0.5} % blu scuro
@@ -158,9 +160,9 @@
 \pagenumbering{arabic}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Chapter 1
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Chapters
 \include{Introduccion/Introduccion.tex}
-
+\include{Muestra/Muestra.tex}
 
 %-------------------------------------REFERENCES
 \chapter*{Agradecimientos}
