--- a/Muestra/Subsecciones/Gaia.tex
+++ b/Muestra/Subsecciones/Gaia.tex
@@ -1,5 +1,29 @@
 \section{Gaia} \label{muestra:sec:gaia}
 
-La misión de \gaia fue lanzada por la \textbf{Agencia Espacial Europea (ESA)} el 19 de Diciembre del 2013, con el objetivo de generar un mapa tridimensional de nuestra Galaxia, la Vía Láctea. Esto incluye calcular las propiedades astrométricas y astrofísicas de sus fuentes observadas con mayor precisión que cualquier otro catálogo publicado previamente. Para lograr esto se utiliza un satélite espacial, el cual está denominado como \gaiaNoSpace, ubicado en el punto Lagrangiano L2 con respecto al sistema Sol-Tierra. Desde este punto la nave tiene una vista sin obstrucciones que le permite observar una cantidad de estrellas enorme, con \textapproxtilde 1,000 millones de fuentes visibles con los instrumentos del satélite \gaiaNoSpace. \citet*{gaiaMission}
+Originalmente denominado como \textit{GAIA}, la misión de \gaia fue lanzada por
+la \textbf{Agencia Espacial Europea (ESA)} el 19 de Diciembre del 2013, con el
+objetivo de generar un mapa tridimensional de nuestra Galaxia, la Vía Láctea.
+Esto incluye calcular las propiedades astrométricas y astrofísicas de sus
+fuentes observadas con mayor precisión que cualquier otro catálogo publicado
+previamente. Para lograr esto se utiliza un satélite espacial, el cual está
+denominado como \gaiaNoSpace, ubicado en el punto Lagrangiano L2 con respecto al
+sistema Sol-Tierra. Desde este punto la nave tiene una vista sin obstrucciones
+que le permite observar una cantidad de estrellas enorme, con \textapproxtilde
+1,000 millones de fuentes visibles con los instrumentos del satélite
+\gaiaNoSpace. \citet*{gaiaMission}
 
-\subsection{Data Release 2} \label{muestra:sec:gaia:dr2}
+\subsection{Fotometría}
+
+
+\subsection{Data Release 2} \label{muestra:sec:gaia:dr2} Para facilitar el
+acceso público a los datos recabados por la misión de \gaia la ESA ha escogido
+liberar los datos públicamente mediante los van recibiendo y procesando. Estos
+son conocidos como los \textbf{Data Releases}. Este trabajo se basa en el
+\textbf{Data Release 2}, el cuál de ahora en adelante será denominado
+simplemente \textbf{GDR2}. Este catálogo está compuesto de las observaciones
+hechas por \gaia entre las fechas de 25 de Julio del 2014 y el 23 de Mayo del
+2016, un periodo de tiempo de 22 meses en total. \citet*{gaiaDr2} GDR2 consiste
+de 1,692,919,135 de fuentes individuales. Existe una gran diversidad de objetos
+dentro de este catálogo, desde estrellas de secuencia principal, asteroides
+dentro del sistema solar, hasta estrellas variables en las regiones más lejanas
+en la Galaxia. 
