Reorganized intro sections into subsections. Advanced in Gaia section.

--- a/Introduccion/Subsecciones/EnanaBlanca.tex
+++ b/Introduccion/Subsecciones/EnanaBlanca.tex
@@ -1,4 +1,4 @@
-\section{Enana Blanca}\label{intro:sec:EnanaBlanca}
+\subsection{Enana Blanca}\label{intro:sec:EnanaBlanca}
 
 Una estrella nace de una nube molecular interestelar, una región de material
 ubicada en el espacio entre estrellas. Dependiendo de la masa inicial de el
