--- a/Muestra/Subsecciones/Gaia.tex
+++ b/Muestra/Subsecciones/Gaia.tex
@@ -12,18 +12,23 @@ que le permite observar una cantidad de estrellas enorme, con \textapproxtilde
 1,000 millones de fuentes visibles con los instrumentos del satélite
 \gaiaNoSpace. \citet*{gaiaMission}
 
+\comment{
 \subsection{Fotometría}
+}
 
+\subsection{Data Release 2} \label{muestra:sec:gaia:dr2}
 
-\subsection{Data Release 2} \label{muestra:sec:gaia:dr2} Para facilitar el
-acceso público a los datos recabados por la misión de \gaia la ESA ha escogido
-liberar los datos públicamente mediante los van recibiendo y procesando. Estos
-son conocidos como los \textbf{Data Releases}. Este trabajo se basa en el
-\textbf{Data Release 2}, el cuál de ahora en adelante será denominado
+Para facilitar el acceso público a los datos recabados por la misión de \gaia la
+ESA ha escogido liberar los datos públicamente mediante los van recibiendo y
+procesando. Estos son conocidos como los \textbf{Data Releases}. Este trabajo se
+basa en el \textbf{Data Release 2}, el cuál de ahora en adelante será denominado
 simplemente \textbf{GDR2}. Este catálogo está compuesto de las observaciones
 hechas por \gaia entre las fechas de 25 de Julio del 2014 y el 23 de Mayo del
 2016, un periodo de tiempo de 22 meses en total. \citet*{gaiaDr2} GDR2 consiste
 de 1,692,919,135 de fuentes individuales. Existe una gran diversidad de objetos
 dentro de este catálogo, desde estrellas de secuencia principal, asteroides
 dentro del sistema solar, hasta estrellas variables en las regiones más lejanas
-en la Galaxia. 
+en la Galaxia.
+
+Los datos utilizados en este estudio fueron accedidos a través de el
+\textit{Gaia Archive}\footnote{\url{https://gea.esac.esa.int/archive/}}, una herramienta libre publicada por la ESA. Este cuenta con una interfaz de ADQL\footnote{\url{https://www.ivoa.net/documents/ADQL/20180112/PR-ADQL-2.1-20180112.html}}, un lenguaje estructurado para hacer consultas a la base de datos de \gaiaNoSpace, incluyendo tablas conectando los datos de \gaia con otros catálogos.
