--- a/ref.bib
+++ b/ref.bib
@@ -20,7 +20,7 @@
 }
 
 @article{gaiaDr2,
-  AUTHOR  = {Gaia Collaboration and A. G. A. Brown and A. Vallenari and T. Prusti and J. H. J. de Bruijne and C. Babusiaux and C. A. L. Bailer-Jones},
+  AUTHOR  = {A. G. A. Brown and A. Vallenari and T. Prusti and J. H. J. de Bruijne and C. Babusiaux and C. A. L. Bailer-Jones},
   JOURNAL = {Astronomy \& Astrophysics},
   NUMBER  = {},
   TITLE   = {Gaia Data Release 2. Summary of the contents and survey properties.},
