--- a/Muestra/Subsecciones/Gaia.tex
+++ b/Muestra/Subsecciones/Gaia.tex
@@ -31,4 +31,9 @@ dentro del sistema solar, hasta estrellas variables en las regiones más lejanas
 en la Galaxia.
 
 Los datos utilizados en este estudio fueron accedidos a través de el
-\textit{Gaia Archive}\footnote{\url{https://gea.esac.esa.int/archive/}}, una herramienta libre publicada por la ESA. Este cuenta con una interfaz de ADQL\footnote{\url{https://www.ivoa.net/documents/ADQL/20180112/PR-ADQL-2.1-20180112.html}}, un lenguaje estructurado para hacer consultas a la base de datos de \gaiaNoSpace, incluyendo tablas conectando los datos de \gaia con otros catálogos.
+\textit{Gaia Archive}\footnote{\url{https://gea.esac.esa.int/archive/}}, una
+herramienta libre publicada por la ESA. Este cuenta con una interfaz de
+ADQL\footnote{\url{https://www.ivoa.net/documents/ADQL/20180112/PR-ADQL-2.1-20180112.html}},
+un lenguaje estructurado para hacer consultas a la base de datos de
+\gaiaNoSpace, incluyendo tablas conectando los datos de \gaia con otros
+catálogos.
