Added Gaia Archive SQL command used (preliminary, waiting on SDSS query results)

--- a/Muestra/Subsecciones/Gaia.tex
+++ b/Muestra/Subsecciones/Gaia.tex
@@ -36,4 +36,4 @@ herramienta libre publicada por la ESA. Este cuenta con una interfaz de
 ADQL\footnote{\url{https://www.ivoa.net/documents/ADQL/20180112/PR-ADQL-2.1-20180112.html}},
 un lenguaje estructurado para hacer consultas a la base de datos de
 \gaiaNoSpace, incluyendo tablas conectando los datos de \gaia con otros
-catálogos.
+catálogos, por ejemplo el catálogo de SDSS.
