--- a/Tesis.tex
+++ b/Tesis.tex
@@ -218,6 +218,8 @@ Data Processing and Analysis Consortium (DPAC,
 \url{https://www.cosmos.esa.int/web/gaia/dpac/consortium}). Funding for the DPAC
 has been provided by national institutions, in particular the institutions
 participating in the {\it Gaia} Multilateral Agreement.
+
+This research made use of Astropy,\footnote{\url{http://www.astropy.org}} a community-developed core Python package for Astronomy \citet*{astropy}.
 \clearpage
 
 \bibliography{ref}
