Added empty section for explaining Szkody photometric study

--- a/Muestra/Muestra.tex
+++ b/Muestra/Muestra.tex
@@ -12,4 +12,5 @@ fín utilizamos el catálogo de \gaia para obtener nuestras candidatas, usando e
 catálogo de SDSS para seleccionar solo las fuentes no observadas previamente. 
 
 \input{Muestra/Subsecciones/Gaia.tex}
+\input{Muestra/Subsecciones/SzkodySearchSDSS.tex}
 \input{Muestra/Subsecciones/CriteriosDeSeleccion.tex}
