--- a/ref.bib
+++ b/ref.bib
@@ -54,7 +54,7 @@
   JOURNAL         = {The Astronomical Journal},
   NUMBER          = {123},
   TITLE           = {Cataclysmic Variables From the Sloan Digital Sky Survey. I. The First Results},
-  VOLUME          = {},
+  VOLUME          = {430-442},
   YEAR            = {2001},
   MONTH           = {October},
 }
