--- a/Muestra/Muestra.tex
+++ b/Muestra/Muestra.tex
@@ -11,6 +11,9 @@ mismas estaremos aportando a la muestra disponible en la literatura. Con este
 fín utilizamos el catálogo de \gaia para obtener nuestras candidatas, usando el
 catálogo de SDSS para seleccionar solo las fuentes no observadas previamente. 
 
-\input{Muestra/Subsecciones/Gaia.tex}
+\section{Catálogos}
+\input{Muestra/Subsecciones/Catalogos/Gaia.tex}
+\input{Muestra/Subsecciones/Catalogos/Sdss.tex}
+
 \input{Muestra/Subsecciones/SzkodySearchSDSS.tex}
 \input{Muestra/Subsecciones/CriteriosDeSeleccion.tex}
