--- a/Muestra/Subsecciones/Catalogos/Gaia.tex
+++ b/Muestra/Subsecciones/Catalogos/Gaia.tex
@@ -1,4 +1,4 @@
-\section{Gaia} \label{muestra:sec:gaia}
+\subsection{Gaia} \label{muestra:sec:gaia}
 
 Originalmente denominado como \textit{GAIA}, la misión de \gaia fue lanzada por
 la \textbf{Agencia Espacial Europea (ESA)} el 19 de Diciembre del 2013, con el
@@ -12,11 +12,9 @@ que le permite observar una cantidad de estrellas enorme, con \textapproxtilde
 1,000 millones de fuentes visibles con los instrumentos del satélite
 \gaiaNoSpace. \citet*{gaiaMission}
 
-\comment{
-\subsection{Fotometría}
-}
+\subsubsection{Fotometría}
 
-\subsection{Data Release 2} \label{muestra:sec:gaia:dr2}
+\subsubsection{Data Release 2} \label{muestra:sec:gaia:dr2}
 
 Para facilitar el acceso público a los datos recabados por la misión de \gaia la
 ESA ha escogido liberar los datos públicamente mediante los van recibiendo y
