--- a/Tesis.tex
+++ b/Tesis.tex
@@ -9,7 +9,7 @@
 \usepackage[]{xcolor}
 \usepackage{booktabs, multirow}
 \usepackage[normalem]{ulem}
-\usepackage[colorlinks,linkcolor=MyGray,urlcolor=blue,citecolor=blue]{hyperref}
+\usepackage[colorlinks,linkcolor=MyDarkBlue,urlcolor=blue,citecolor=blue]{hyperref}
 \usepackage{natbib}
 \bibliographystyle{apalike}
 \usepackage[nottoc]{tocbibind}
