Almost finished describing SDSS catalog for thesis use. Added SDSS telescope paper reference.

--- a/Muestra/Subsecciones/SzkodySearchSDSS.tex
+++ b/Muestra/Subsecciones/SzkodySearchSDSS.tex
@@ -1,6 +1,12 @@
 \section{Szkody, et al.: Cataclysmic Variables from the Sloan Digital Sky Survey}
 
-Con el lanzamiento de el \textbf{Sloan Digital Sky Survey}\footnote{\url{https://www.sdss.org}} (de ahora en adelante será referido como \textbf{SDSS}) Szkody y su equipo reconocieron una nueva área de oportunidad para expandir la población de variables cataclísmicas conocidas en la Galaxia. De interés particular son aquellos sistemas que más se aproximan al periodo mínimo según los modelos evolutivos de las VCs; estos objetos llegan a magnitudes fuera del alcance de la mayoría de los telescopios usados hasta este entonces, por lo cual no han sido el objetivo de estudio en la literatura. Partiendo de SDSS Szkody y colaboradores iniciaron una búsqueda de VCs tenues, con la expectativa de capturar VCs de todas varias sub-categorías.
+Con el lanzamiento del SDSS, Szkody y su equipo reconocieron una nueva área de
+oportunidad para expandir la población de variables cataclísmicas conocidas en
+la Galaxia. De interés particular son aquellos sistemas que más se aproximan al
+periodo mínimo según los modelos evolutivos de las VCs; estos objetos llegan a
+magnitudes fuera del alcance de la mayoría de los telescopios usados hasta este
+entonces, por lo cual no han sido el objetivo de estudio en la literatura.
+Partiendo de SDSS Szkody y colaboradores iniciaron una búsqueda de VCs tenues,
+con la expectativa de capturar VCs de todas varias sub-categorías.
 
 \subsection{Encontrando Candidatas a VCs}
-
