--- a/ref.bib
+++ b/ref.bib
@@ -59,6 +59,31 @@
   MONTH           = {October},
 }
 
+@article{sdss2_5mTelescope,
+  AUTHOR          = {James E. Gunn and Walter A. Siegmund and Edward J. Mannery and Russell E. Owen and Charles L.
+Hull and R. French Leger and Larry N. Carey and Gillian R. Knapp and Donald G. York and William N.
+Boroski and Stephen M. Kent and Robert H. Lupton and Constance M. Rockosi and Michael L.
+Evans and Patrick Waddell and John E. Anderson and James Annis and John C. Barentine and Larry M.
+Bartoszek and Steven Bastian and Stephen B. Bracker and Howard J. Brewington and Charles I.
+Briegel and Jon Brinkmann and Yorke J. Brown and Michael A. Carr and Paul C. Czarapata and Craig
+C. Drennan and Thomas Dombeck and Glenn R. Federwitz and Bruce A. Gillespie and Carlos
+Gonzales and Sten U. Hansen and Michael Harvanek and Jeffrey Hayes and Wendell Jordan and Ellyne
+Kinney and Mark Klaene and S. J. Kleinman and Richard G. Kron and Jurek Kresinski and Glenn Lee and
+Siriluk Limmongkol and Carl W. Lindenmeyer and Daniel C. Long and Craig L. Loomis and Peregrine
+M. McGehee and Paul M. Mantsch and Eric H. Neilsen Jr. and Richard M. Neswold and Peter R.
+Newman and Atsuko Nitta and John Peoples Jr. and Jeffrey R. Pier and Peter S. Prieto and Angela
+Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and Shu-i Wang},
+  JOURNAL         = {The Astronomical Journal},
+  NUMBER          = {},
+  TITLE           = {The 2.5 m Telescope of the Sloan Digital Sky Survey},
+  VOLUME          = {131},
+  YEAR            = {2006},
+  month           = {April},
+  adsurl          = {https://ui.adsabs.harvard.edu/abs/2006AJ....131.2332G/},
+  keywords        = {Surveys; Telescopes; Astrophysics},
+  doi             = {10.1086/500975}
+}
+
 @inbook{astronomyPhysicalPerspective_stellarOldAgeChapter,
   AUTHOR    = {Marc L. Kutner},
   TITLE     = {Astronomy},
