--- a/Introduccion/Subsecciones/EnanaBlanca.tex
+++ b/Introduccion/Subsecciones/EnanaBlanca.tex
@@ -1,4 +1,4 @@
-\subsection{Enana Blanca}\label{intro:sec:EnanaBlanca}
+\section{Enana Blanca}\label{intro:sec:EnanaBlanca}
 
 Una estrella nace de una nube molecular interestelar, una región de material
 ubicada en el espacio entre estrellas. Dependiendo de la masa inicial de el
@@ -21,7 +21,7 @@ estrella con su luminosidad, dada en términos de luminosidad solar.
 	su tamaño, causado por las fluctuaciones del balance entre la presión
 	radiativa generada por las reacciones nucleares en el núcleo contra la
 	presión gravitacional.}
-	\citet{astronomyPhysicalPerspective_stellarOldAgeChapter}
+	Diagrama obtenido de \citet{astronomyPhysicalPerspective_stellarOldAgeChapter}
 	\label{evolucionMSEstrella}
 \end{figure}
 
