--- a/Introduccion/Subsecciones/SistemasBinarios.tex
+++ b/Introduccion/Subsecciones/SistemasBinarios.tex
@@ -1,12 +1,23 @@
-\subsection{Sistemas Binarios}
+\section{Sistemas Binarios}
 
-A diferencia de nuestro sistema solar, una VC está compuesta de dos distintas
-estrellas: una estrella enana blanca y una estrella de secuencia principal.
-Dentro de un sistema binario ambas estrellas existen en proximidad de una a otra
-en ordenes de unos cuantos UA, comparado con las distancias entre distintos
-sistemas solares cuya magnitud recae en el orden de años luz. Estas estrellas
-van evolucionando juntas desde su formación dentro de una nube molecular común,
-donde las estrellas nacen. Durante sus primeros momentos de vida se logran
+A diferencia de nuestro sistema solar, una gran mayoría de sistemas dentro de
+nuestra Galaxia están compuestas de multiples estrellas a tan solo unos cuantos
+radios solares de separación. Una parte de estos son los \textit{sistemas
+binarios}: aquellos compuestos de dos distintas estrellas. En este tipo de
+sistemas la distancia entre las estrellas individuales cae dentro de ordenes de
+unas cuantas unidades astronómicas, ordenes de magnitudes más pequeñas que la
+distancia desde el Sol hacia la estrella más cercana a nuestro sistema solar,
+Proxima Centauri, a cuatro años luz. 
+
+\comment{
+Estas estrellas van
+evolucionando juntas desde su formación dentro de una nube molecular común,
+ligadas una con otra en su camino evolutivo. 
+}
+
+\comment{
+Durante sus primeros momentos de vida se logran
 formar una gran cantidad de estas estrellas; sin embargo la mayoría de las
 estrellas formadas durante esta etapa de tiempo no llegan a la edad vieja,
 siendo consumidas por estrellas más masivas dentro de la nube molecular. 
+}
