--- a/Introduccion/Subsecciones/VariablesCataclismicas.tex
+++ b/Introduccion/Subsecciones/VariablesCataclismicas.tex
@@ -1,4 +1,10 @@
 \section{Variables Cataclísmicas}
+
+\input{Introduccion/Subsecciones/CV/Clasificacion.tex}
+\input{Introduccion/Subsecciones/CV/Evolucion.tex}
+\input{Introduccion/Subsecciones/CV/DiscoAcrecion.tex}
+
+\comment{
 Nuestra Galaxia es el hogar de varios sistemas solares, los cuales muestran una
 gran variedad de propiedades físicas. Existen sistemas tal como nuestro sistema
 solar, que consisten de una estrella de secuencia principal rodeada de planetas
@@ -9,6 +15,7 @@ de sistema en especifico denominado como \textbf{variables cataclísmicas}:
 sistemas de contacto que consisten de una estrella de tipo
 \hyperref[intro:sec:EnanaBlanca]{enana blanca} y una
 \hyperref[intro:sec:EnanaRoja]{enana roja}. 
+}
 
 \comment{
 Este tipo de sistemas muestran comportamiento variable a lo largo del tiempo, en
