Started on Binary System section of intro

--- a/Tesis.tex
+++ b/Tesis.tex
@@ -72,6 +72,7 @@
 \newcommand{\comment}[1]{}
 \newcommand{\gaiaNoSpace}{\textit{Gaia}}
 \newcommand{\gaia}{\gaiaNoSpace \space}
+\newcommand{\quotes}[1]{``#1''}
 %------------------------------------------------------------------------------------
 \definecolor{MyGray}{rgb}{0.30,0.31,0.32} % definizione grigio
 \definecolor{MyDarkBlue}{rgb}{0.,0.08,0.5} % blu scuro
