--- a/ref.bib
+++ b/ref.bib
@@ -95,6 +95,16 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   MONTH     = {February}
 }
 
+@inbook{fundamentalAstronomy::chapter10_binaryStars,
+  AUTHOR         = {Hannu Karttunen and Pekka Kröger and Heikki Oja and Markku Poutanen and Karl Johan Donner},
+  CHAPTER        = {10},
+  EDITOR         = {},
+  PAGES          = {},
+  PUBLISHER      = {Springer},
+  TITLE          = {Fundamental Astronomy},
+  YEAR           = {2017}
+}
+
 @ARTICLE{astropy,
    author = {{The Astropy Collaboration} and {Price-Whelan}, A.~M. and {Sip{\\H o}cz}, B.~M. and
 	{G\"{u}nther}, H.~M. and {Lim}, P.~L. and {Crawford}, S.~M. and
@@ -152,4 +162,3 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..123T},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
