--- a/Introduccion/Subsecciones/SistemasBinarios.tex
+++ b/Introduccion/Subsecciones/SistemasBinarios.tex
@@ -9,6 +9,14 @@ unas cuantas unidades astronómicas, ordenes de magnitudes más pequeñas que la
 distancia desde el Sol hacia la estrella más cercana a nuestro sistema solar,
 Proxima Centauri, a cuatro años luz. 
 
+\subsection{Clasificaciones Observacionales}
+
+Dependiendo del método de detección y las propiedades aparentes del sistema se puede clasificar un sistema binario de estrellas. Estas clasificaciones son independiente de sus propiedades físicas, como la clase espectral de cada estrella o sus masas individuales. Al determinar su clasificación observacional se puede delimitar las técnicas observacionales que son viables para recabar datos del sistema; un sistema astrométrico sería indistinguible de uno espectroscópico si uno intenta identificar las componentes individuales a simple vista, o con un telescopio demasiado débil para el trabajo.
+
+Las \textit{binarias visuales} son aquellos cuya separación orbital aparente es suficientemente grande para distinguir las dos estrellas individuales en la bóveda celeste. A pesar de que se puede trazar la órbita de la secundaria con varios años de observaciones, se requiere de cálculos adicionales para determinar la órbita exacta de las componentes. Esto se debe a la inclinación del sistema con respecto al eje de observación hacia la Tierra; solo es posible observar \quotes{una proyección del elipse orbital relativo en el plano del cielo,} \citet{fundamentalAstronomy::chapter10_binaryStars} aunque esto se puede superar usando el hecho de que la estrella primaria aparentemente inmóvil debe de estar presente \quotes{en un punto focal de la órbita relativa.}
+
+Las \textit{binarias espectroscópicas}
+
 \comment{
 Estas estrellas van
 evolucionando juntas desde su formación dentro de una nube molecular común,
