Began section on "Stars"

--- a/Introduccion/Subsecciones/SistemasBinarios.tex
+++ b/Introduccion/Subsecciones/SistemasBinarios.tex
@@ -15,7 +15,7 @@ Dependiendo del método de detección y las propiedades aparentes del sistema se
 
 Las \textit{binarias visuales} son aquellos cuya separación orbital aparente es suficientemente grande para distinguir las dos estrellas individuales en la bóveda celeste. A pesar de que se puede trazar la órbita de la secundaria con varios años de observaciones, se requiere de cálculos adicionales para determinar la órbita exacta de las componentes. Esto se debe a la inclinación del sistema con respecto al eje de observación hacia la Tierra; solo es posible observar \quotes{una proyección del elipse orbital relativo en el plano del cielo,} \citet{fundamentalAstronomy::chapter10_binaryStars} aunque esto se puede superar usando el hecho de que la estrella primaria aparentemente inmóvil debe de estar presente \quotes{en un punto focal de la órbita relativa.}
 
-Las \textit{binarias espectroscópicas}
+Las \textit{binarias espectroscópicas} presentan variaciones periódicas en sus espectros, en donde las líneas espectrales detectadas \quotes{oscilan periodicamente alrededor de la longitud de onda promedio} \citet{astronomyPhysicalPerspective::chapter5_binaryStars}. Esto se observa debido al \textbf{desplazamiento de Doppler}. 
 
 \comment{
 Estas estrellas van
