--- a/Tesis.tex
+++ b/Tesis.tex
@@ -3,7 +3,8 @@
 \usepackage{geometry}
 \usepackage{float}
 \usepackage{titlesec}
-\usepackage{amssymb,amsmath}
+\usepackage{amssymb,amsmath,mathtools}
+\usepackage{mhchem}
 \usepackage[]{graphicx} \graphicspath{ {Fig/} }
 \usepackage{caption}
 \usepackage[]{xcolor}
