--- a/ref.bib
+++ b/ref.bib
@@ -95,6 +95,17 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   MONTH     = {February}
 }
 
+@inbook{astronomyPhysicalPerspective::chapter5_binaryStars,
+  AUTHOR    = {Marc L. Kutner},
+  TITLE     = {Astronomy},
+  SUBTITLE  = {A Physical Perspective},
+  PUBLISHER = {Cambridge University Press},
+  CHAPTER   = {5 - Binary stars and stellar masses},
+  EDITION   = {2},
+  YEAR      = {2017},
+  MONTH     = {February}
+}
+
 @inbook{fundamentalAstronomy::chapter10_binaryStars,
   AUTHOR         = {Hannu Karttunen and Pekka Kröger and Heikki Oja and Markku Poutanen and Karl Johan Donner},
   CHAPTER        = {10},
@@ -103,6 +114,16 @@ Prosapio and Claudio Rivetta and Donald P. Schneider and Stephanie Snedden and S
   PUBLISHER      = {Springer},
   TITLE          = {Fundamental Astronomy},
   YEAR           = {2017}
+}
+
+@inbook{anIntroStellarAstro::chapter1_basicConcepts,
+  AUTHOR         = {Francis LeBlanc},
+  CHAPTER        = {1},
+  EDITOR         = {},
+  PAGES          = {},
+  PUBLISHER      = {John Wiley \& Sons Ltd.},
+  TITLE          = {An Introduction to Stellar Astrophysics},
+  YEAR           = {2010}
 }
 
 @ARTICLE{astropy,
