--- a/Introduccion/Introduccion.tex
+++ b/Introduccion/Introduccion.tex
@@ -1,5 +1,6 @@
 \chapter{Introducción}
 
+\input{Introduccion/Subsecciones/Estrella/Estrella.tex}
 \input{Introduccion/Subsecciones/SistemasBinarios.tex}
 \input{Introduccion/Subsecciones/VariablesCataclismicas.tex}
 \input{Introduccion/Subsecciones/EnanaBlanca.tex}
