Split into multiple lines

--- a/Introduccion/Subsecciones/Estrella/Estrella.tex
+++ b/Introduccion/Subsecciones/Estrella/Estrella.tex
@@ -1,6 +1,18 @@
 \section{Estrellas}
 
-Las \textit{estrellas} son de los objetos más fundamentales e importantes en el estudio de los astros. \citet*{anIntroStellarAstro::chapter1_basicConcepts} define una estrella como \quotes{un objeto celeste en el cual existe, o alguna vez existió (en el caso de una estrella muerta) fusión de hidrógeno sostenido en su núcleo.} Dentro del núcleo de cada estrella activa se forjan nuevos elementos más pesados debido a estas reacciones termonucleares, primero generando el helio mediante el proceso de $4 \ce{^1H} \rightarrow \ce{^4He} + E$, hasta llegar a la fusion del helio para formar el carbono mediante el \textit{proceso triple-alfa}.
+Las \textit{estrellas} son de los objetos más fundamentales e importantes en el
+estudio de los astros. \citet*{anIntroStellarAstro::chapter1_basicConcepts}
+define una estrella como \quotes{un objeto celeste en el cual existe, o alguna
+vez existió (en el caso de una estrella muerta) fusión de hidrógeno sostenido en
+su núcleo.} Dentro del núcleo de cada estrella activa se forjan nuevos elementos
+más pesados debido a estas reacciones termonucleares, primero generando el helio
+mediante el proceso de $4 \ce{^1H} \rightarrow \ce{^4He} + E$, hasta llegar a la
+fusion del helio para formar el carbono mediante el \textit{proceso
+triple-alfa}.
 
-A pesar de este requisito presentado para clasificar a un objeto como una estrella existen varios tipos de estrellas en nuestra Galaxia. Entre ellas muestran una gran variedad de propiedades físicas, tanto como su brillo y color, como su camino evolutivo a lo largo del tiempo, en donde sus comportamientos divergen en lo que van agotando su combustible.
+A pesar de este requisito presentado para clasificar a un objeto como una
+estrella existen varios tipos de estrellas en nuestra Galaxia. Entre ellas
+muestran una gran variedad de propiedades físicas, tanto como su brillo y color,
+como su camino evolutivo a lo largo del tiempo, en donde sus comportamientos
+divergen en lo que van agotando su combustible.
 
